--- a/ObjetivoEventos.API/appsettings.Development.json
+++ b/ObjetivoEventos.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Connection": ""
+    "Connection": "Data Source=Diego-PC;Initial Catalog=ObjetivoEventos;Integrated Security=SSPI;TrustServerCertificate=True"
   },
   "JwtOptions": {
     "SecurityKey": "md]B7<XFJCvUn.jtZ)[hL{9%u=D#pGMaPs5+*f,@Ez}4weY;cT",
